--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
             
             <div class="board-container">
                 <div class="categories-row">
-                    <div class="category-header" data-category="0">Games</div>
+                    <div class="category-header" data-category="0">Nyhetsbildet 2025</div>
                     <div class="category-header" data-category="1">2025</div>
-                    <div class="category-header" data-category="2">Norsk Historie</div>
-                    <div class="category-header" data-category="3">Per lager</div>
-                    <div class="category-header" data-category="4">Per lager</div>
+                    <div class="category-header" data-category="2">Historie</div>
+                    <div class="category-header" data-category="3">Nyttår</div>
+                    <div class="category-header" data-category="4">Games</div>
                 </div>
                 
                 <div class="board">
